@@ -254,8 +254,9 @@ gen_crypttab_from_kernel_cmdline() {
 
 # normalise_device([--quiet],$device)
 #   Print the block device (not symlink) associated with the given
-#   (link to a) block $device.  Like for fstab(5), LABEL=<label> or
-#   UUID=<uuid> may be given instead of a device name.
+#   (link to a) block $device.  Like for fstab(5), LABEL=<label>
+#   UUID=<uuid>, PARTUUID=<partuuid> and PARTLABEL=<partlabel> may be
+#   given instead of a device name.
 #   Return 0 on success, 1 on error.
 normalise_device() {
     local dev="$1" quiet='n'
@@ -269,6 +270,10 @@ normalise_device() {
         dev="/dev/disk/by-uuid/${dev#UUID=}"
     elif [ "${dev#LABEL=}" != "$dev" ] && [ -n "${dev#LABEL=}" ]; then
         dev="/dev/disk/by-label/$(printf '%s' "${dev#LABEL=}" | sed 's,/,\\x2f,g')"
+    elif [ "${dev#PARTUUID=}" != "$dev" ] && [ -n "${dev#PARTUUID=}" ]; then
+        dev="/dev/disk/by-partuuid/${dev#PARTUUID=}"
+    elif [ "${dev#PARTLABEL=}" != "$dev" ] && [ -n "${dev#PARTLABEL=}" ]; then
+        dev="/dev/disk/by-partlabel/$(printf '%s' "${dev#PARTLABEL=}" | sed 's,/,\\x2f,g')"
     fi
     if dev="$(readlink -f -- "$dev")" && [ -n "$dev" ] && [ -b "$dev" ]; then
         printf '%s\n' "$dev"
