@@ -49,6 +49,8 @@ cryptsetup (2:2.0.3-2) UNRELEASED; urgency=medium
       and 'tcrypt-veracrypt' is an alias for 'veracrypt'.
     + Add support for 'keyfile-size=' and 'keyfile-offset=' options.
       (Closes: #849335.)
+    + Source devices can now be specified using their PARTUUID or PARTLABEL,
+      similar to fstab(5).
   * debian/scripts/cryptdisks_start: Add support for '-r'/'--readonly' switch
     to setup readonly mappings. (Closes: #782843.)
   * debian/scripts/cryptdisks_stop: Add support for closing multiple disks at
